StenlyTU/networking/03-deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-last
  name: nginx-last
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-last
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-last
    spec:
      containers:
      - image: nginx:1.18-alpine
        name: nginx
        ports:
        - containerPort: 80
        resources: {}
status: {}
