StenlyTU/networking/01-nginx-pod.yaml
# Create a pod with image nginx called nginx-1 and expose its port 80.
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: nginx-1
  namespace: practice
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx-1
status:
  loadBalancer: {}
---
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-1
  name: nginx-1
  namespace: practice
spec:
  containers:
  - image: nginx:1.18-alpine
    name: nginx-1
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
