StenlyTU/networking/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: alochym
  name: alochym
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-last
  type: ClusterIP
status:
  loadBalancer: {}
