StenlyTU/networking/03-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-nginx
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: nginx-last # selector for the pods
  ingress:            # allow ingress traffic
  - from:
    - podSelector:    # from pods
        matchLabels:  # with this label
          access: granted
